<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp2ndClass"
    android:padding="30dp"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">


        <TextView
            android:id="@+id/signup_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/create_account"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:textSize="40sp"
            android:transitionName="transition_title_text" />
        <TextView
            android:id="@+id/signup_slide_text"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/_2_2"
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="30sp"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:transitionName="transition_slide_text"
            android:gravity="center" />

    </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_gender"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/black"
                android:buttonTint="@color/black"/>


            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/female"
                android:textColor="@color/black"
                android:buttonTint="@color/black"/>


            <RadioButton
                android:id="@+id/others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/other"
                android:textColor="@color/black"
                android:buttonTint="@color/black"/>
            </RadioGroup>


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_your_age"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <DatePicker
                android:theme="@style/myDatePicker"
                android:id="@+id/age_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:spinnersShown="true"

                />

        </LinearLayout>

        <Button
            android:id="@+id/signup_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:backgroundTint="@null"
            android:background="@color/black"
            android:elevation="5dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:transitionName="transition_next_btn" />
















    </LinearLayout>

</ScrollView>