<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="30dp"
    android:transitionName="transition_signup"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">





        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">


            <TextView
                android:id="@+id/signup_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:transitionName="transition_title_text"
                tools:ignore="RelativeOverlap" />


            <TextView
                android:id="@+id/signup_slide_text"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/_1_2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:transitionName="transition_slide_text" />
        </RelativeLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_full_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_full_name"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"

                    app:startIconTint="@color/black">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="sans-serif"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null" />


                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signup_username"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_username"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/black"
                        app:hintTextColor="@color/black"

                        app:startIconTint="@color/black">


                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="sans-serif"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@null" />


                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/signup_email"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_email"
                            android:textColorHint="@color/black"
                            app:boxStrokeColor="@color/black"
                            app:boxStrokeWidthFocused="2dp"
                            app:endIconMode="clear_text"
                            app:endIconTint="@color/black"
                            app:hintTextColor="@color/black"
                            app:startIconTint="@color/black">


                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="sans-serif"
                                android:inputType="textEmailAddress"
                                android:textColor="@color/black"
                                android:textCursorDrawable="@null" />


                            </com.google.android.material.textfield.TextInputLayout>


                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/signup_password"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/enter_password"
                                android:textColorHint="@color/black"
                                app:boxStrokeColor="@color/black"
                                app:boxStrokeWidthFocused="2dp"
                                app:endIconTint="@color/black"
                                app:hintTextColor="@color/black"
                                app:passwordToggleEnabled="true"
                                app:passwordToggleTint="@color/black"
                                app:startIconTint="@color/black">


                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:fontFamily="sans-serif"
                                    android:inputType="textPassword"
                                    android:textColor="@color/black"
                                    android:textCursorDrawable="@null" />


                                </com.google.android.material.textfield.TextInputLayout>


                                </LinearLayout>


                                <Button
                                    android:id="@+id/signup_next_button"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="30dp"
                                    app:backgroundTint="@null"
                                    android:elevation="5dp"
                                    android:text="@string/next_btn"
                                    android:textColor="@color/white"
                                    android:transitionName="transition_next_btn"
                                    android:onClick="callNextSignupScreen"
                                    android:background="@color/black"
                                    />


<!--                                <Button-->
<!--                                    android:id="@+id/signup_login_button"-->
<!--                                    android:layout_width="match_parent"-->
<!--                                    android:layout_height="wrap_content"-->
<!--                                    android:layout_marginTop="20dp"-->
<!--                                    android:background="#00000000"-->
<!--                                    android:elevation="5dp"-->
<!--                                    android:fontFamily="sans-serif"-->

<!--                                    android:text="@string/login"-->
<!--                                    android:textColor="@color/black"-->
<!--                                    android:transitionName="transition_login_btn" />-->


                                </LinearLayout>


                                </ScrollView>